--- a/config/boards/shields/caldera/caldera.conf
+++ b/config/boards/shields/caldera/caldera.conf
@@ -1,4 +1,7 @@
 CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
+
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_KEYBOARD_NAME="Caldera"
+
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
